# hotel-booking-service

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  hotel_db_dump.sql  pyproject.toml
src/: conftest.py
src/bookings/: exceptions.py  models.py  serializers.py  urls.py  views.py
src/bookings/migrations/: 0001_initial.py  0002_alter_booking_room.py  0003_alter_booking_options.py  0004_alter_booking_options.py
src/bookings/services/: booking_service.py
src/bookings/tests/: conftest.py  test_bookings_delete.py  test_bookings_get.py  test_bookings_post.py
src/common/: responses.py
src/config/: settings.py  urls.py
src/rooms/: models.py  serializers.py  urls.py  views.py
src/rooms/migrations/: 0001_initial.py  0002_alter_room_options_room_created_at_and_more.py  0003_remove_room_rooms_room_price_a62835_idx_and_more.py
src/rooms/services/: room_service.py
src/rooms/tests/: conftest.py  test_rooms_delete.py  test_rooms_get.py  test_rooms_post.py
